# weibo

./: AUTH_MECHANISM.md  CLAUDE.md  Cargo.toml  build.rs  plan.md  review.md
docs/: message_overlap_root_cause.md
src/: bot_detector.rs  ca.rs  gpui_views.rs  logger.rs  main.rs  proxy.rs  qr_login.rs  webview_login.rs
src/cli/: cookie_login.rs  mod.rs  qr_login.rs
src/domain/: mod.rs
src/infra/: audio.rs  config.rs  cookie_io.rs  mod.rs  ws_client.rs
src/legacy/: mod.rs
src/model/: auth_service.rs  chat_service.rs  mod.rs  timeline_service.rs
src/view/: app_shell.rs  mod.rs  theme.rs  widgets.rs
src/view/screens/: chat_screen.rs  home_screen.rs  login_screen.rs  mod.rs  root_screen.rs
src/view/widgets/: centered_msg.rs  contact_card.rs  emoji_panel.rs  header_bar.rs  member_sidebar.rs  message_bubble.rs  mod.rs  qr_display.rs  timeline_card.rs
src/viewmodel/: chat_vm.rs  home_vm.rs  login_vm.rs  mod.rs  root_vm.rs
weibo-rs/: Cargo.toml
weibo-rs/crates/weibo-domain/: Cargo.toml
weibo-rs/crates/weibo-domain/src/: auth.rs  chat.rs  error.rs  lib.rs  tabs.rs  timeline.rs
weibo-rs/crates/weibo-infra/: Cargo.toml
weibo-rs/crates/weibo-infra/src/: audio.rs  config.rs  cookie_io.rs  http_client.rs  lib.rs  logger.rs  ws_client.rs
weibo-rs/crates/weibo-model/: Cargo.toml
weibo-rs/crates/weibo-model/src/: auth_service.rs  chat_service.rs  lib.rs  qr_login.rs  timeline_service.rs
weibo-rs/crates/weibo-tauri/: Cargo.toml  tauri.conf.json
weibo-rs/crates/weibo-tauri/src/: events.rs  main.rs  tauri_context.rs
weibo-rs/crates/weibo-tauri/src/commands/: auth.rs  chat.rs  mod.rs  timeline.rs
weibo-rs/crates/weibo-viewmodel/: Cargo.toml
weibo-rs/crates/weibo-viewmodel/src/: app_state.rs  chat_vm.rs  context.rs  home_vm.rs  lib.rs  login_vm.rs
weibo-rs/frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
weibo-rs/frontend/src/: App.tsx
weibo-rs/frontend/src/components/: ContactList.tsx  EmojiPanel.tsx  GroupSidebar.tsx  MessageInput.tsx  MessageList.tsx  MessagePanel.tsx  QrDisplay.tsx  TabBar.tsx  TimelineList.tsx
weibo-rs/frontend/src/hooks/: useAppState.ts
weibo-rs/frontend/src/styles/: index.css
weibo-rs/frontend/src/tauri/: index.ts
weibo-rs/frontend/src/types/: index.ts
weibo-rs/frontend/src/views/: ChatView.tsx  HomeView.tsx  LoginView.tsx
