[package]
name = "weibo"
version = "0.1.0"
edition = "2021"

[features]
legacy = []

[dependencies]
reqwest = { version = "0.12", features = ["cookies", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
rsa = "0.9"
rand = "0.8"
hex = "0.4"
url = "2"
open = "5"

# WebView login (wry + tao) — kept for compatibility
wry = "0.50"
tao = "0.32"

# AES-CBC encryption
aes = "0.8"
cbc = "0.1"
sha2 = "0.10"

# Image decoding (QR code PNG → RGBA for GPUI)
image = "0.25"

# GPUI — GPU-accelerated UI framework
gpui = "0.2"

# MITM proxy
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
rustls = "0.23"
rustls-pemfile = "2"
rustls-native-certs = "0.7"
tokio-rustls = "0.26"
x509-parser = "0.16"
pem = "3"
time = "0.3"
ring = "0.17"
