[package]
name = "weibo-infra"
version = "0.1.0"
edition = "2021"

[dependencies]
weibo-domain = { path = "../weibo-domain" }
reqwest = { version = "0.12", features = ["cookies", "json"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde_json = "1"
rodio = "0.19"
anyhow = "1"
